--- a/index.html
+++ b/index.html
@@ -869,7 +869,8 @@
 
                     <footer className="footer">
                         <div className="container">
-                            <p>© 2024 FitLife - Your Health Awareness Platform</p>
+                            <p> Made by AAYUSH, ADITYA, DEV, SOURAV & ROHAN</p>
+                            <p>© 2026 FitLife - Your Health Awareness Platform</p>
                         </div>
                     </footer>
                 </>
